Added about page, adjusted navbar stylings, TODO: add more styles

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,15 @@ body {
   margin: 0px;
 }
 
+/* TODO: add padding to top of sticky header */
+
+header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 100;
+}
+
 h1 {
   text-align: center;
   margin: 25px;
@@ -32,7 +41,14 @@ li a {
   padding: 15px;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.8);
+}
 
+li a:hover {
+  background-color: black;
+}
+
+#active {
+  background-color: black;
 }
 
 .pull-right {
@@ -42,6 +58,7 @@ li a {
 figure {
   width: 50%;
   float: left;
+  height: 500px;
 }
 
 img {
@@ -56,6 +73,13 @@ figcaption {
 
 article {
   padding: 25px;
+  height: 500px;
+}
+
+article>p {
+  overflow-y: scroll;
+  height: 50%;
+  /* 50% of parent section */
 }
 
 p {
@@ -76,4 +100,15 @@ footer>p {
   float: left;
   padding:25px;
   font-size: 90%;
+}
+
+footer>p::first-letter {
+  color: white;
+  font-size: 120%;
+  font-weight: bold;
+}
+
+footer>p::first-line {
+  font-style: italic;
+
 }
