--- a/css/about.css
+++ b/css/about.css
@@ -31,3 +31,19 @@ table tr td:hover {
   color: white;
   cursor: pointer;
 }
+
+.mid-right {
+  position: fixed;
+  right: 0;
+  bottom: 50%;
+  z-index: 1;
+}
+
+.selector {
+  color: red;
+}
+
+h6[class="selector pull-right"] {
+  color: black;
+  font-size: 250%;
+}
